# raspi4_rust_bootloader

./: .gitignore  Cargo.toml  Makefile  README.md  Tlink.ld  build.rs  link.ld
.github/workflows/: ci.yml
src/: boot.s  font8x8_basic.rs  frame_buffer.rs  lib.rs  mailbox.rs  main.rs  text_buffer.rs  timer.rs
