[package]
name = "raspi4_rust_bootloader"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "raspi4_rust_bootloader"
path = "src/main.rs"
test = false

[build]
target = "aarch64-unknown-none"

[unstable]
build-std = ["core", "compiler_builtins"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
